MapR [SPARK-946] Excessive warning messages in spark-shell (#892)
Co-authored-by: Egor Krivokon <>